--- a/cloud-large.yaml
+++ b/cloud-large.yaml
@@ -1,5 +1,6 @@
 api.port: 1323
 etcd.address: "192.168.122.21:2379"
+container.pool.cpus: 6.0
 container.pool.memory: 7168
 cloud: true
 cloud.cost: 0.00005
