--- a/cloud-small.yaml
+++ b/cloud-small.yaml
@@ -1,5 +1,6 @@
 api.port: 1323
 etcd.address: "192.168.122.21:2379"
+container.pool.cpus: 1.0
 container.pool.memory: 2048
 cloud: true
 cloud.cost: 0.000005
