--- a/cloud-small.yaml
+++ b/cloud-small.yaml
@@ -4,5 +4,6 @@ container.pool.cpus: 1.0
 container.pool.memory: 2048
 cloud: true
 cloud.cost: 0.000005
+cloud.delay: 0.002
 scheduler.queue.capacity: 0
 metrics.enabled: false
