--- a/lb-conf.yaml
+++ b/lb-conf.yaml
@@ -6,6 +6,7 @@ storage.orgname: "serverledge"
 mab.agent.enabled: true
 mab.agent.interval: 120
 mab.agent.strategy: "UCB"
+mab.agent.explorationfactor: 0.03
 mab.agent.reward.alpha: 0
 mab.agent.reward.beta: 1
 mab.agent.reward.gamma: 0
