Prova del ResetUCB (scenario non stazionario)

--- a/lb-conf.yaml
+++ b/lb-conf.yaml
@@ -5,8 +5,9 @@ storage.token: "serverledge"
 storage.orgname: "serverledge"
 mab.agent.enabled: true
 mab.agent.interval: 120
-mab.agent.strategy: "UCB"
+mab.agent.strategy: "ResetUCB"
 mab.agent.explorationfactor: 0.004
+mab.agent.interval: 2
 mab.agent.reward.alpha: 0
 mab.agent.reward.beta: 0
 mab.agent.reward.gamma: 1
