--- a/lb-conf.yaml
+++ b/lb-conf.yaml
@@ -5,7 +5,7 @@ storage.token: "serverledge"
 storage.orgname: "serverledge"
 mab.agent.enabled: true
 mab.agent.interval: 120
-mab.agent.strategy: "SWUCB"
+mab.agent.strategy: "UCB"
 mab.agent.explorationfactor: 0.004
 mab.agent.rucb.resetinterval: 15
 mab.agent.swucb.windowsize: 10
