--- a/lb-conf.yaml
+++ b/lb-conf.yaml
@@ -3,7 +3,7 @@ api.port: 1324
 storage.address: "http://localhost:8086"
 storage.token: "serverledge"
 storage.orgname: "serverledge"
-mab.agent.enabled: false
+mab.agent.enabled: true
 mab.agent.interval: 120
 mab.agent.strategy: "UCB"
 mab.agent.explorationfactor: 0.05
