--- a/lb-conf.yaml
+++ b/lb-conf.yaml
@@ -5,12 +5,12 @@ storage.token: "serverledge"
 storage.orgname: "serverledge"
 mab.agent.enabled: true
 mab.agent.interval: 120
-mab.agent.strategy: "UCB"
+mab.agent.strategy: "UCB2"
 mab.agent.explorationfactor: 0.05
 mab.agent.rucb.resetinterval: 15
 mab.agent.swucb.windowsize: 10
 mab.agent.ucb2.alpha: 1
-mab.agent.klucb.c: 1
+mab.agent.klucb.c: 0    # value 0 is recommended for better performances
 mab.agent.reward.alpha: 0
 mab.agent.reward.beta: 0
 mab.agent.reward.gamma: 0
